--- a/Eric_Collatz.ipynb
+++ b/Eric_Collatz.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Eric Collatz",
       "provenance": [],
-      "authorship_tag": "ABX9TyNSNDJY/up9ZhrmDg9A8vlE",
+      "authorship_tag": "ABX9TyMqpXK7Cqb4xqG1BgtlPmvl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q1oDzIMuRetR",
-        "outputId": "47e25ee7-ced8-4ec1-e37a-46eea2fe9bb5"
+        "outputId": "2b295752-610c-4849-97d7-d76ff1fbd6b7"
       },
       "source": [
         "def modified_collatz(n, behavior, iterations): #behavior is a list of 2-tuples\n",
@@ -48,58 +48,27 @@
         "\n",
         "def modified_collatz_loop_finder(n,behavior,max_iterations):\n",
         "  tracker = update(n,behavior)\n",
-        "  elements = [n,tracker]\n",
+        "  elements = [n]\n",
         "  iterations = 0\n",
-        "  while tracker > n and iterations < max_iterations:\n",
+        "  while tracker not in elements and iterations < max_iterations:\n",
+        "    elements.append(tracker)\n",
         "    iterations += 1\n",
         "    tracker = update(tracker,behavior)\n",
-        "    elements.append(tracker)\n",
-        "  if tracker == n:\n",
-        "    print(elements)\n",
         "  if iterations == max_iterations:\n",
         "    print(\"{} produces either a very long loop, or an infinite ascending chain\".format(n))\n",
+        "  elif tracker == min(elements):\n",
+        "    print(elements)\n",
         "\n",
-        "behavior_list = [(.5,0),(3,5)]\n",
-        "for i in range(1,10000):\n",
-        "  modified_collatz_loop_finder(i,behavior_list,100)\n",
-        "\n",
-        "  \n"
+        "behavior_list = [(.5,0),(3,1)]\n",
+        "for i in range(1,1000):\n",
+        "  modified_collatz_loop_finder(i,behavior_list,400)\n"
       ],
-      "execution_count": 16,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[1, 8, 4, 2, 1]\n",
-            "3 produces either a very long loop, or an infinite ascending chain\n",
-            "[5, 20, 10, 5]\n",
-            "7 produces either a very long loop, or an infinite ascending chain\n",
-            "11 produces either a very long loop, or an infinite ascending chain\n",
-            "[19, 62, 31, 98, 49, 152, 76, 38, 19]\n",
-            "[23, 74, 37, 116, 58, 29, 92, 46, 23]\n",
-            "123 produces either a very long loop, or an infinite ascending chain\n",
-            "171 produces either a very long loop, or an infinite ascending chain\n",
-            "[187, 566, 283, 854, 427, 1286, 643, 1934, 967, 2906, 1453, 4364, 2182, 1091, 3278, 1639, 4922, 2461, 7388, 3694, 1847, 5546, 2773, 8324, 4162, 2081, 6248, 3124, 1562, 781, 2348, 1174, 587, 1766, 883, 2654, 1327, 3986, 1993, 5984, 2992, 1496, 748, 374, 187]\n",
-            "259 produces either a very long loop, or an infinite ascending chain\n",
-            "[347, 1046, 523, 1574, 787, 2366, 1183, 3554, 1777, 5336, 2668, 1334, 667, 2006, 1003, 3014, 1507, 4526, 2263, 6794, 3397, 10196, 5098, 2549, 7652, 3826, 1913, 5744, 2872, 1436, 718, 359, 1082, 541, 1628, 814, 407, 1226, 613, 1844, 922, 461, 1388, 694, 347]\n",
-            "2043 produces either a very long loop, or an infinite ascending chain\n",
-            "3067 produces either a very long loop, or an infinite ascending chain\n",
-            "3515 produces either a very long loop, or an infinite ascending chain\n",
-            "4091 produces either a very long loop, or an infinite ascending chain\n",
-            "4379 produces either a very long loop, or an infinite ascending chain\n",
-            "4603 produces either a very long loop, or an infinite ascending chain\n",
-            "5275 produces either a very long loop, or an infinite ascending chain\n",
-            "5351 produces either a very long loop, or an infinite ascending chain\n",
-            "6139 produces either a very long loop, or an infinite ascending chain\n",
-            "6571 produces either a very long loop, or an infinite ascending chain\n",
-            "6907 produces either a very long loop, or an infinite ascending chain\n",
-            "7035 produces either a very long loop, or an infinite ascending chain\n",
-            "7779 produces either a very long loop, or an infinite ascending chain\n",
-            "7915 produces either a very long loop, or an infinite ascending chain\n",
-            "8423 produces either a very long loop, or an infinite ascending chain\n",
-            "8763 produces either a very long loop, or an infinite ascending chain\n",
-            "9211 produces either a very long loop, or an infinite ascending chain\n",
-            "9219 produces either a very long loop, or an infinite ascending chain\n"
+            "[1, 4, 2]\n"
           ],
           "name": "stdout"
         }
