--- a/Eric_Collatz.ipynb
+++ b/Eric_Collatz.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Eric Collatz",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqpXK7Cqb4xqG1BgtlPmvl",
+      "authorship_tag": "ABX9TyOxlO2MD54v6VWFbL5X5t6H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q1oDzIMuRetR",
-        "outputId": "2b295752-610c-4849-97d7-d76ff1fbd6b7"
+        "outputId": "57f771a9-7983-4fa9-df82-8c1fa8969c34"
       },
       "source": [
-        "def modified_collatz(n, behavior, iterations): #behavior is a list of 2-tuples\n",
+        "def modified_collatz(n, behavior = [(1/2,0), (3,1)], iterations = 200): \n",
         "  arity = len(behavior)\n",
         "  for i in range(iterations):\n",
         "    print(n)\n",
@@ -55,314 +55,39 @@
         "    iterations += 1\n",
         "    tracker = update(tracker,behavior)\n",
         "  if iterations == max_iterations:\n",
-        "    print(\"{} produces either a very long loop, or an infinite ascending chain\".format(n))\n",
+        "    return \"Starting with {} produces either a very long loop, or an infinite ascending chain\".format(n)\n",
         "  elif tracker == min(elements):\n",
-        "    print(elements)\n",
+        "    return len(elements), elements\n",
         "\n",
-        "behavior_list = [(.5,0),(3,1)]\n",
+        "def num_loops_finder(behavior):\n",
+        "  num_loops = 0\n",
+        "  for i in range(1000):\n",
+        "    if type(modified_collatz_loop_finder(i,behavior,400)) == tuple:\n",
+        "      num_loops += 1\n",
+        "  return num_loops\n",
+        "\n",
+        "def longest_loop_length(behavior):\n",
+        "  longest_length = 0\n",
+        "  for i in range(1000):\n",
+        "    if type(modified_collatz_loop_finder(i,behavior,400)) == tuple:\n",
+        "      longest_length = max(longest_length, modified_collatz_loop_finder(i,behavior,400)[0])\n",
+        "  return longest_length\n",
+        "\n",
+        "behavior_list = [(1/2,0),(5,1)]\n",
+        "print(\"longest length is\", longest_loop_length(behavior_list))\n",
+        "print(\"number of loops is\", num_loops_finder(behavior_list))\n",
+        "\n",
         "for i in range(1,1000):\n",
-        "  modified_collatz_loop_finder(i,behavior_list,400)\n"
+        "  if modified_collatz_loop_finder(i,behavior_list,400) == tuple:\n",
+        "    print(modified_collatz_loop_finder(i,behavior_list,400))\n"
       ],
-      "execution_count": 46,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[1, 4, 2]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "W6IP2Ur6O_X5",
-        "outputId": "2dffe45a-6288-433a-a746-248234154b6c"
-      },
-      "source": [
-        "def collatz(n):\n",
-        "  steps = 0\n",
-        "  while n > 1:\n",
-        "    if n%2 == 0:\n",
-        "      n = n//2\n",
-        "    else:\n",
-        "      n = 3*n + 1\n",
-        "    steps = steps + 1\n",
-        "  return steps\n",
-        "def sigma(n):\n",
-        "  initial = n\n",
-        "  steps = 0\n",
-        "  while n >= initial:\n",
-        "    if n%2 == 0:\n",
-        "      n = n//2\n",
-        "    else:\n",
-        "      n = 3*n + 1\n",
-        "    steps = steps + 1\n",
-        "  return steps\n",
-        "for i in range(3,1000,4):\n",
-        "  print(i, sigma(i))\n",
-        "\n",
-        "    "
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3 6\n",
-            "7 11\n",
-            "11 8\n",
-            "15 11\n",
-            "19 6\n",
-            "23 8\n",
-            "27 96\n",
-            "31 91\n",
-            "35 6\n",
-            "39 13\n",
-            "43 8\n",
-            "47 88\n",
-            "51 6\n",
-            "55 8\n",
-            "59 11\n",
-            "63 88\n",
-            "67 6\n",
-            "71 83\n",
-            "75 8\n",
-            "79 13\n",
-            "83 6\n",
-            "87 8\n",
-            "91 73\n",
-            "95 13\n",
-            "99 6\n",
-            "103 68\n",
-            "107 8\n",
-            "111 50\n",
-            "115 6\n",
-            "119 8\n",
-            "123 13\n",
-            "127 24\n",
-            "131 6\n",
-            "135 11\n",
-            "139 8\n",
-            "143 11\n",
-            "147 6\n",
-            "151 8\n",
-            "155 65\n",
-            "159 34\n",
-            "163 6\n",
-            "167 47\n",
-            "171 8\n",
-            "175 13\n",
-            "179 6\n",
-            "183 8\n",
-            "187 11\n",
-            "191 21\n",
-            "195 6\n",
-            "199 13\n",
-            "203 8\n",
-            "207 21\n",
-            "211 6\n",
-            "215 8\n",
-            "219 13\n",
-            "223 50\n",
-            "227 6\n",
-            "231 19\n",
-            "235 8\n",
-            "239 32\n",
-            "243 6\n",
-            "247 8\n",
-            "251 44\n",
-            "255 21\n",
-            "259 6\n",
-            "263 11\n",
-            "267 8\n",
-            "271 11\n",
-            "275 6\n",
-            "279 8\n",
-            "283 39\n",
-            "287 16\n",
-            "291 6\n",
-            "295 13\n",
-            "299 8\n",
-            "303 21\n",
-            "307 6\n",
-            "311 8\n",
-            "315 11\n",
-            "319 34\n",
-            "323 6\n",
-            "327 34\n",
-            "331 8\n",
-            "335 13\n",
-            "339 6\n",
-            "343 8\n",
-            "347 16\n",
-            "351 13\n",
-            "355 6\n",
-            "359 26\n",
-            "363 8\n",
-            "367 16\n",
-            "371 6\n",
-            "375 8\n",
-            "379 13\n",
-            "383 19\n",
-            "387 6\n",
-            "391 11\n",
-            "395 8\n",
-            "399 11\n",
-            "403 6\n",
-            "407 8\n",
-            "411 24\n",
-            "415 24\n",
-            "419 6\n",
-            "423 16\n",
-            "427 8\n",
-            "431 13\n",
-            "435 6\n",
-            "439 8\n",
-            "443 11\n",
-            "447 65\n",
-            "451 6\n",
-            "455 13\n",
-            "459 8\n",
-            "463 19\n",
-            "467 6\n",
-            "471 8\n",
-            "475 13\n",
-            "479 26\n",
-            "483 6\n",
-            "487 32\n",
-            "491 8\n",
-            "495 44\n",
-            "499 6\n",
-            "503 8\n",
-            "507 16\n",
-            "511 29\n",
-            "515 6\n",
-            "519 11\n",
-            "523 8\n",
-            "527 11\n",
-            "531 6\n",
-            "535 8\n",
-            "539 21\n",
-            "543 21\n",
-            "547 6\n",
-            "551 13\n",
-            "555 8\n",
-            "559 26\n",
-            "563 6\n",
-            "567 8\n",
-            "571 11\n",
-            "575 16\n",
-            "579 6\n",
-            "583 16\n",
-            "587 8\n",
-            "591 13\n",
-            "595 6\n",
-            "599 8\n",
-            "603 26\n",
-            "607 13\n",
-            "611 6\n",
-            "615 19\n",
-            "619 8\n",
-            "623 21\n",
-            "627 6\n",
-            "631 8\n",
-            "635 13\n",
-            "639 37\n",
-            "643 6\n",
-            "647 11\n",
-            "651 8\n",
-            "655 11\n",
-            "659 6\n",
-            "663 8\n",
-            "667 39\n",
-            "671 63\n",
-            "675 6\n",
-            "679 21\n",
-            "683 8\n",
-            "687 13\n",
-            "691 6\n",
-            "695 8\n",
-            "699 11\n",
-            "703 132\n",
-            "707 6\n",
-            "711 13\n",
-            "715 8\n",
-            "719 21\n",
-            "723 6\n",
-            "727 8\n",
-            "731 13\n",
-            "735 16\n",
-            "739 6\n",
-            "743 39\n",
-            "747 8\n",
-            "751 34\n",
-            "755 6\n",
-            "759 8\n",
-            "763 32\n",
-            "767 26\n",
-            "771 6\n",
-            "775 11\n",
-            "779 8\n",
-            "783 11\n",
-            "787 6\n",
-            "791 8\n",
-            "795 44\n",
-            "799 21\n",
-            "803 6\n",
-            "807 13\n",
-            "811 8\n",
-            "815 16\n",
-            "819 6\n",
-            "823 8\n",
-            "827 11\n",
-            "831 24\n",
-            "835 6\n",
-            "839 24\n",
-            "843 8\n",
-            "847 13\n",
-            "851 6\n",
-            "855 8\n",
-            "859 26\n",
-            "863 13\n",
-            "867 6\n",
-            "871 57\n",
-            "875 8\n",
-            "879 19\n",
-            "883 6\n",
-            "887 8\n",
-            "891 13\n",
-            "895 39\n",
-            "899 6\n",
-            "903 11\n",
-            "907 8\n",
-            "911 11\n",
-            "915 6\n",
-            "919 8\n",
-            "923 16\n",
-            "927 60\n",
-            "931 6\n",
-            "935 19\n",
-            "939 8\n",
-            "943 13\n",
-            "947 6\n",
-            "951 8\n",
-            "955 11\n",
-            "959 34\n",
-            "963 6\n",
-            "967 13\n",
-            "971 8\n",
-            "975 16\n",
-            "979 6\n",
-            "983 8\n",
-            "987 13\n",
-            "991 42\n",
-            "995 6\n",
-            "999 16\n"
+            "longest length is 10\n",
+            "number of loops is 4\n"
           ],
           "name": "stdout"
         }
