--- a/P4M_Notebook_5.ipynb
+++ b/P4M_Notebook_5.ipynb
@@ -64,7 +64,7 @@
         "for n in range(10):\n",
         "  print(n*n)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
         "  L.append(n*n)\n",
         "print(L)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
         "  L[n] = n*n\n",
         "print(L)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +167,7 @@
         "square_list = [n*n for n in range(10)]\n",
         "print(square_list)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
       "source": [
         "import numpy as np # First we have to load the package."
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -211,7 +211,7 @@
         "A = np.arange(10)\n",
         "print(A*A)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
         "    L.append(n*n)\n",
         "  return L"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,7 +260,7 @@
         "    L[n] = n*n\n",
         "  return L"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
         "def make_sq_3(N):\n",
         "  return [n*n for n in range(N)]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
         "  A = np.arange(N)\n",
         "  return A*A"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +300,7 @@
       "source": [
         "%timeit make_sq_1(1000)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +324,7 @@
       "source": [
         "%timeit make_sq_2(1000)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +347,7 @@
       "source": [
         "%timeit make_sq_3(1000)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +370,7 @@
       "source": [
         "%timeit make_sq_4(1000)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -401,7 +401,7 @@
         "import seaborn as sns # In case we want some modern stylings.\n",
         "import time as time"
       ],
-      "execution_count": 15,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
         "plt.ylabel('Time (seconds)')\n",
         "plt.show()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -471,7 +471,7 @@
       "source": [
         ""
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -596,7 +596,7 @@
         "print(\"The average N for which make_sq_4 outperforms make_sq_3 is\", tot_overtake/trials)\n",
         "\n"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -622,11 +622,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "YCga4OcBUrer",
-        "outputId": "9d892534-4253-460d-e4ad-82d3a2751050",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 373
-        }
+        },
+        "outputId": "9d892534-4253-460d-e4ad-82d3a2751050"
       },
       "source": [
         "def make_sq_5(N):\n",
@@ -657,7 +657,7 @@
         "plt.ylabel('Time (seconds)')\n",
         "plt.show()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -678,10 +678,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "eB6_hma8XOEt",
-        "outputId": "0ee7454a-1f00-4c01-a46f-b1c2d36c800c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0ee7454a-1f00-4c01-a46f-b1c2d36c800c"
       },
       "source": [
         "def inflate(S):\n",
@@ -691,7 +691,7 @@
         "  return inflated\n",
         "print(inflate('Hello'))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,10 +739,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZMlcgAXm4ymD",
-        "outputId": "d23b731d-c27b-4244-cba6-8d33b32dabc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d23b731d-c27b-4244-cba6-8d33b32dabc5"
       },
       "source": [
         "def rep_one(N): #Counts the number of ways to write N as a square\n",
@@ -768,7 +768,7 @@
         "print([rep_three(n) for n in range(20)]) #Matches the OEIS sequence\n",
         "%timeit rep_three(100000) \n"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,7 +792,7 @@
       "source": [
         "rep_three(6) # This should output 24."
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -886,7 +886,7 @@
         "\n",
         "primes = where(isprime_list(100000))"
       ],
-      "execution_count": 89,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -945,17 +945,17 @@
         "    candidate_modulus += 1\n",
         "  return \"No candidate found for the modulus with given max_size\""
       ],
-      "execution_count": 118,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "U8ZjJ4RMRGCD",
-        "outputId": "cf6f6122-26c8-4668-a7ab-df653c1078fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cf6f6122-26c8-4668-a7ab-df653c1078fd"
       },
       "source": [
         "good_values = []\n",
@@ -968,7 +968,7 @@
         "print(good_values)\n",
         "print(bad_values)"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -983,26 +983,45 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LLII_q4rSQlj",
-        "outputId": "e83ce9ab-01e8-4563-e9d1-ece5e7aa79d8",
+        "id": "QTufBz-Oz3ia",
+        "outputId": "57d16bc5-c65f-4988-8546-a504d256af6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "print(cool_modulus_finder(96, max_size = 1000))"
+        "print(cool_modulus_finder(3))"
       ],
-      "execution_count": 120,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3 failed\n",
+            "modulus is 3, remainder is 1\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LLII_q4rSQlj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "92a2de6f-2f75-4dfa-8de2-daa3d4a6a634"
+      },
+      "source": [
+        "print(cool_modulus_finder(5))"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
             "4 failed\n",
-            "6 failed\n",
-            "8 failed\n",
-            "12 failed\n",
-            "24 failed\n",
             "No candidate found for the modulus with given max_size\n"
           ],
           "name": "stdout"
@@ -1013,39 +1032,36 @@
       "cell_type": "code",
       "metadata": {
         "id": "aiT2wWqJTq3O",
-        "outputId": "0f2a4065-0fb2-41e1-f06d-7729bbaacd88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5db7e1b4-8478-4863-9aaa-530cfc6d2691"
       },
       "source": [
-        "k = 96\n",
+        "k = 5\n",
+        "mod = 4\n",
         "cool_primes = cool_list(primes,k)\n",
         "anti_cool_primes = anti_cool_list(primes,k)\n",
-        "cool_mod_primes = mod_list(cool_primes, 48)\n",
-        "anti_cool_mod_primes = mod_list(anti_cool_primes, 48)\n",
-        "print(cool_primes[:30])\n",
-        "print(cool_primes[-1:-30:-1])\n",
-        "print(anti_cool_primes[:30])\n",
-        "print(anti_cool_primes[-1:-30:-1])\n",
-        "print(cool_mod_primes[:30])\n",
-        "print(cool_mod_primes[-1:-30:-1])\n",
-        "print(anti_cool_mod_primes[:30])\n",
-        "print(anti_cool_mod_primes[-1:-30:-1])"
+        "cool_mod_primes = mod_list(cool_primes, mod)\n",
+        "anti_cool_mod_primes = mod_list(anti_cool_primes, mod)\n",
+        "print(\"First 30 cool primes:\", cool_primes[:30])\n",
+        "#print(\"Last 30 cool primes:\", cool_primes[-1:-30:-1])\n",
+        "print(\"First 30 anti-cool primes:\", anti_cool_primes[:30])\n",
+        "#print(\"Last 30 anti-cool primes:\",anti_cool_primes[-1:-30:-1])\n",
+        "print(\"First 30 cool primes mod {}:\".format(mod), cool_mod_primes[:30])\n",
+        "#print(\"Last 30 cool primes mod {}:\".format(mod),cool_mod_primes[-1:-30:-1])\n",
+        "print(\"First 30 anti-cool primes mod {}:\".format(mod),anti_cool_mod_primes[:30])\n",
+        "#print(\"Last 30 anti-cool primes mod {}:\".format(mod), anti_cool_mod_primes[-1:-30:-1])"
       ],
-      "execution_count": 123,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[97, 409, 433, 457, 673, 937, 1009, 1033, 1153, 1321, 1489, 1609, 1657, 1753, 1777, 2089, 2161, 2377, 2521, 2593, 2689, 2713, 3121, 3217, 3361, 3457, 3673, 3769, 3889, 4297]\n",
-            "[99817, 99529, 99409, 99289, 98953, 98929, 98809, 98641, 98473, 98377, 98257, 98017, 97849, 97777, 97729, 97561, 97177, 96601, 96553, 96289, 95737, 95713, 94777, 94561, 94441, 94321, 94057, 94033, 94009]\n",
-            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 101, 103, 107, 109, 113, 127]\n",
-            "[99991, 99989, 99971, 99961, 99929, 99923, 99907, 99901, 99881, 99877, 99871, 99859, 99839, 99833, 99829, 99823, 99809, 99793, 99787, 99767, 99761, 99733, 99721, 99719, 99713, 99709, 99707, 99689, 99679]\n",
-            "[1, 25, 1, 25, 1, 25, 1, 25, 1, 25, 1, 25, 25, 25, 1, 25, 1, 25, 25, 1, 1, 25, 1, 1, 1, 1, 25, 25, 1, 25]\n",
-            "[25, 25, 1, 25, 25, 1, 25, 1, 25, 25, 1, 1, 25, 1, 1, 25, 25, 25, 25, 1, 25, 1, 25, 1, 25, 1, 25, 1, 25]\n",
-            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 5, 11, 13, 19, 23, 25, 31, 35, 41, 5, 7, 11, 13, 17, 31]\n",
-            "[7, 5, 35, 25, 41, 35, 19, 13, 41, 37, 31, 19, 47, 41, 37, 31, 17, 1, 43, 23, 17, 37, 25, 23, 17, 13, 11, 41, 31]\n"
+            "First 30 cool primes: [5, 29, 41, 61, 89, 101, 109, 149, 181, 229, 241, 269, 281, 349, 389, 401, 409, 421, 449, 461, 509, 521, 541, 569, 601, 641, 661, 701, 709, 761]\n",
+            "First 30 anti-cool primes: [2, 3, 7, 11, 13, 17, 19, 23, 31, 37, 43, 47, 53, 59, 67, 71, 73, 79, 83, 97, 103, 107, 113, 127, 131, 137, 139, 151, 157, 163]\n",
+            "First 30 cool primes mod 4: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+            "First 30 anti-cool primes mod 4: [2, 3, 3, 3, 1, 1, 3, 3, 3, 1, 3, 3, 1, 3, 3, 3, 1, 3, 3, 1, 3, 3, 1, 3, 3, 1, 3, 3, 1, 3]\n"
           ],
           "name": "stdout"
         }
