--- a/P4M_Notebook_5.ipynb
+++ b/P4M_Notebook_5.ipynb
@@ -195,7 +195,7 @@
       "source": [
         "import numpy as np # First we have to load the package."
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -401,7 +401,7 @@
         "import seaborn as sns # In case we want some modern stylings.\n",
         "import time as time"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -898,170 +898,70 @@
         "def is_cool(n,k): #Returns true if n can be written in the form x^2 + ky^2\n",
         "  x = int(np.sqrt(n))\n",
         "  y = 0\n",
-        "  while x >=0:\n",
+        "  while x >=0: #Tries values for x between 0 and sqrt(n)\n",
         "    if x**2 + k*y**2 == n:\n",
         "      return True\n",
-        "    elif x**2 + k*y**2 < n:\n",
+        "    elif x**2 + k*y**2 < n: #Increases y if x^2 + ky^2 is too large\n",
         "      y += 1\n",
-        "    else:\n",
+        "    else: #Decreases x if x^2 + ky^2 is too large\n",
         "      x -= 1\n",
         "  return False\n",
         "\n",
-        "def cool_list(L,k):\n",
+        "def cool_list(L,k): #Takes a list and returns a list containing the entries that can be written in the form x^2 + ky^2\n",
         "  return [n for n in L if is_cool(n,k)]\n",
-        "def anti_cool_list(L,k):\n",
+        "\n",
+        "def anti_cool_list(L,k): #Takes a list and returns a list containing the entries that cannot be written in the form x^2 + ky^2\n",
         "  return [n for n in L if not is_cool(n,k)]\n",
-        "def mod_list(L,mod):\n",
+        "\n",
+        "def mod_list(L,mod): #Takes a list and returns a list of the remainders modulo mod\n",
         "  return [n%mod for n in L]\n",
-        "def is_uniform(L):\n",
-        "  value = L[0]\n",
-        "  for n in L:\n",
-        "    if n != value:\n",
-        "      return False\n",
-        "  return True\n",
+        "\n",
         "def cool_modulus_finder(k, max_size = 100):\n",
-        "  candidate_modulus = 3\n",
-        "  cool_primes = cool_list(primes,k)\n",
-        "  anti_cool_primes = anti_cool_list(primes,k)\n",
-        "  while candidate_modulus <= max_size:\n",
-        "    cool_mod_primes = mod_list(cool_primes, candidate_modulus)\n",
-        "    if is_uniform(cool_mod_primes[-1:-50:-1]):\n",
-        "      #print(cool_mod_primes[:30])\n",
-        "      #print(cool_mod_primes[-1:-50:-1])\n",
-        "      candidate_remainder = cool_mod_primes[-1]\n",
-        "      flag = True\n",
-        "      anti_cool_mod_primes = mod_list(anti_cool_primes, candidate_modulus)\n",
-        "      #print(anti_cool_mod_primes[:30])\n",
-        "      #print(anti_cool_mod_primes[-1:-50:-1])\n",
-        "      for n in anti_cool_mod_primes[-1:-50:-1]:\n",
-        "        if n == candidate_remainder:\n",
-        "          #print(n)\n",
-        "          print(candidate_modulus, \"failed\")\n",
-        "          flag = False\n",
-        "          break\n",
-        "      if flag:\n",
-        "        print( 'modulus is {}, remainder is {}'.format(candidate_modulus, candidate_remainder))\n",
-        "        return candidate_modulus\n",
+        "  '''\n",
+        "  Given k, finds the first value of B such that a prime can be written in the form x^2 + ky^2 if and only if it's remainder mod B lies in a set A, and returns the integer B and the set A\n",
+        "  '''\n",
+        "  candidate_modulus = 1 \n",
+        "  cool_primes = cool_list(primes,k) #All primes that can be written in the form x^2 + ky^2\n",
+        "  anti_cool_primes = anti_cool_list(primes,k) #All primes that cannot be written in the form x^2 + ky^2\n",
+        "  while candidate_modulus <= max_size: \n",
+        "    cool_mod_primes = set(mod_list(cool_primes, candidate_modulus)) #The set of all remainders that primes of the form x^2 + ky^2 take modulo candidate_modulus\n",
+        "    anti_cool_mod_primes = set(mod_list(anti_cool_primes, candidate_modulus)) #The set of all remainders that primes not of the form x^2 + ky^2 take modulo candidate_modulus\n",
+        "    if len(cool_mod_primes.intersection(anti_cool_mod_primes)) > 0: #If these sets do not intersect trivially, we move on to the next candidate_modulus\n",
+        "      pass\n",
+        "    else:\n",
+        "      return candidate_modulus, cool_mod_primes #Returns the modulus and the set of remainders\n",
         "    candidate_modulus += 1\n",
         "  return \"No candidate found for the modulus with given max_size\""
       ],
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U8ZjJ4RMRGCD",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "cf6f6122-26c8-4668-a7ab-df653c1078fd"
-      },
-      "source": [
-        "good_values = []\n",
-        "bad_values = []\n",
-        "for k in range(1,50):\n",
-        "  if type(cool_modulus_finder(k)) == int:\n",
-        "    good_values.append(k)\n",
-        "  else:\n",
-        "    bad_values.append(k)\n",
-        "print(good_values)\n",
-        "print(bad_values)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[1, 3, 4, 8, 9, 12, 16, 24, 48]\n",
-            "[2, 5, 6, 7, 10, 11, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 49]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "QTufBz-Oz3ia",
-        "outputId": "57d16bc5-c65f-4988-8546-a504d256af6e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "print(cool_modulus_finder(3))"
-      ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "modulus is 3, remainder is 1\n",
-            "3\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LLII_q4rSQlj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "92a2de6f-2f75-4dfa-8de2-daa3d4a6a634"
+        "outputId": "9bd861a4-cfba-44dd-f6b8-320f09cac621"
       },
       "source": [
-        "print(cool_modulus_finder(5))"
+        "for i in range(3,10):\n",
+        "  modulus, remainders = cool_modulus_finder(i)\n",
+        "  print('A prime can be written in the form x^2 + {}y^2 if and only if it is congruent to one of {} modulo {}'.format(i,remainders, modulus))"
       ],
-      "execution_count": 27,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "4 failed\n",
-            "No candidate found for the modulus with given max_size\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aiT2wWqJTq3O",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5db7e1b4-8478-4863-9aaa-530cfc6d2691"
-      },
-      "source": [
-        "k = 5\n",
-        "mod = 4\n",
-        "cool_primes = cool_list(primes,k)\n",
-        "anti_cool_primes = anti_cool_list(primes,k)\n",
-        "cool_mod_primes = mod_list(cool_primes, mod)\n",
-        "anti_cool_mod_primes = mod_list(anti_cool_primes, mod)\n",
-        "print(\"First 30 cool primes:\", cool_primes[:30])\n",
-        "#print(\"Last 30 cool primes:\", cool_primes[-1:-30:-1])\n",
-        "print(\"First 30 anti-cool primes:\", anti_cool_primes[:30])\n",
-        "#print(\"Last 30 anti-cool primes:\",anti_cool_primes[-1:-30:-1])\n",
-        "print(\"First 30 cool primes mod {}:\".format(mod), cool_mod_primes[:30])\n",
-        "#print(\"Last 30 cool primes mod {}:\".format(mod),cool_mod_primes[-1:-30:-1])\n",
-        "print(\"First 30 anti-cool primes mod {}:\".format(mod),anti_cool_mod_primes[:30])\n",
-        "#print(\"Last 30 anti-cool primes mod {}:\".format(mod), anti_cool_mod_primes[-1:-30:-1])"
-      ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "First 30 cool primes: [5, 29, 41, 61, 89, 101, 109, 149, 181, 229, 241, 269, 281, 349, 389, 401, 409, 421, 449, 461, 509, 521, 541, 569, 601, 641, 661, 701, 709, 761]\n",
-            "First 30 anti-cool primes: [2, 3, 7, 11, 13, 17, 19, 23, 31, 37, 43, 47, 53, 59, 67, 71, 73, 79, 83, 97, 103, 107, 113, 127, 131, 137, 139, 151, 157, 163]\n",
-            "First 30 cool primes mod 4: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-            "First 30 anti-cool primes mod 4: [2, 3, 3, 3, 1, 1, 3, 3, 3, 1, 3, 3, 1, 3, 3, 3, 1, 3, 3, 1, 3, 3, 1, 3, 3, 1, 3, 3, 1, 3]\n"
+            "A prime can be written in the form x^2 + 3y^2 if and only if it is congruent to one of {0, 1} modulo 3\n",
+            "A prime can be written in the form x^2 + 4y^2 if and only if it is congruent to one of {1} modulo 4\n",
+            "A prime can be written in the form x^2 + 5y^2 if and only if it is congruent to one of {9, 5, 1} modulo 20\n",
+            "A prime can be written in the form x^2 + 6y^2 if and only if it is congruent to one of {1, 7} modulo 24\n",
+            "A prime can be written in the form x^2 + 7y^2 if and only if it is congruent to one of {9, 11, 1, 7} modulo 14\n",
+            "A prime can be written in the form x^2 + 8y^2 if and only if it is congruent to one of {1} modulo 8\n",
+            "A prime can be written in the form x^2 + 9y^2 if and only if it is congruent to one of {1} modulo 12\n"
           ],
           "name": "stdout"
         }
